k8s/aat/common/xui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xui
  labels:
    slackChannel: xui-pipeline
---
