k8s/aat/common/xui/register-redirectregex.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: xui-mo-register-redirectregex
  namespace: xui
spec:
  redirectRegex:
    regex: ^https://register-org.aat.platform.hmcts.net/(.*)
    replacement: https://manage-org.aat.platform.hmcts.net/register-org/register/organisation-name
