k8s/aat/common/xui/register-org-ingress-new.yaml
#this is to apply permanent redirect on register-org domain
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/redirect-regex: ^https://register-org.aat.platform.hmcts.net/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://manage-org.aat.platform.hmcts.net/register-org/register
  name: register-org-ingress-new
  namespace: xui
spec:
  rules:
    - host: register-org.aat.platform.hmcts.net
      http:
        paths:
          - backend:
              serviceName: xui-mo-webapp-nodejs
              servicePort: 80
            path: /
